# Confidential-iImpermanent-Loss-Insurance-for-Lps

./: .env.example  .env.sepolia  .eslintrc.json  .gitignore  .gitmodules  .prettierrc.json  COMPREHENSIVE_DOCUMENTATION.md  CONTRACT_UPDATE_PLAN.md  DEMO_TEST_CHECKLIST.md  DEPLOYMENT_READY.md  EIGENLAYER_INTEGRATION_COMPLETE.md  FOUNDRY_MIGRATION.md  FOUNDRY_MIGRATION_SUCCESS.md  FRONTEND_ENV_VERIFICATION.md  HARDHAT_RESOLUTION.md  PHASE1_COMPLETION.md  PHASE1_COMPLETION_EXTENDED.md  PHASE2_COMPLETION.md  PHASE2_TO_PHASE3_TRANSITION.md  PHASE3_PREPARATION.md  PROJECT_STATUS_FINAL.md  PROJECT_STATUS_UPDATE.md  README.md  TECH_STACK_UPDATE_SUMMARY.md  V4_DEPLOYMENT_SUCCESS.md  V4_HOOKS_DEPLOYMENT_PLAN.md  V4_INTEGRATION_COMPLETE.md  V4_INTEGRATION_ROADMAP.md  build.sh  deploy-sepolia.sh  deploy.sh  extract-abis.sh  foundry.toml  hardhat.config.ts  package-lock.json  package.json  remappings.txt  tsconfig.json
.github/: create-issues.sh  implementation-summary.md  project-roadmap.md  project.yml  promt.md
avs-node/: .env.example  .eslintrc.json  README.md  jest.config.js  package-lock.json  package.json  start-eigenlayer.sh  tsconfig.json
contracts/: EigenAVSManager.sol  EigenAVSManagerV2.sol  EigenLayerServiceManager.sol  FeeSplitter.sol  (+3 more)
eigenlayer-compute/: .gitignore  Cargo.toml  Dockerfile  README.md  package.json
eigenlayer-compute/contracts/: README.md  foundry.toml
eigenlayer-compute/contracts/script/: DeployConfidentialInsurance.s.sol
eigenlayer-compute/contracts/src/: ConfidentialInsurance.sol
eigenlayer-compute/src/: main.rs  simple_main.rs
(+140 files in other folders)
