[package]
name = "confidentialinsurance-server"
version = "1.0.0"
edition = "2021"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Link-time optimization
codegen-units = 1 # Better optimization
panic = "abort"   # Smaller binary
strip = "symbols" # Remove debug symbols

[[bin]]
name = "simple"
path = "src/simple_main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sha3 = "0.10"
